// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sequence-artist draw cross mark to 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [],
        "class": "activations",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": Array [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "message__line",
            "itemId": "message-0-4",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "stroke": "#3b4044",
              "text": "Message",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "message__text",
            "type": "text",
          },
        ],
        "class": "message",
        "itemId": "message-0-4",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist draw participant classifier 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "r": 7.6,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                Object {
                  "attrs": Object {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-C",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [],
        "class": "activations",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "lineWidth": 1.5,
                    "r": 7.6,
                    "stroke": "#3b4044",
                  },
                  "type": "circle",
                },
                Object {
                  "attrs": Object {
                    "fill": null,
                    "lineWidth": 1.5,
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "A",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "ellipse",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {},
            "mark": Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "fill": "#fdb05e",
                    "stroke": "#3b4044",
                  },
                  "type": "path",
                },
              ],
              "type": "group",
            },
            "type": "symbol",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "C",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-C",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist match example snapshot 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {
          "fill": null,
          "lineDash": Array [
            2,
            2,
          ],
          "lineWidth": 2,
          "stroke": "#fdb05e",
        },
        "type": "rect",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-User",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "anchor": "start",
              "fill": "#f8f8f2",
              "stroke": "#3b4044",
            },
            "class": "activation",
            "type": "rect",
          },
        ],
        "class": "activations",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "message__line",
            "itemId": "message-0-0",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "stroke": "#3b4044",
              "text": "render this",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "message__text",
            "type": "text",
          },
          Object {
            "attrs": Object {},
            "children": Array [
              Object {
                "attrs": Object {
                  "fill": "#3b4044",
                  "r": 8,
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              Object {
                "attrs": Object {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "1",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence-number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "message",
        "itemId": "message-0-0",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": Array [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "message__line",
            "itemId": "message-3-1",
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "stroke": "#3b4044",
              "text": "Has input changed?",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "message__text",
            "type": "text",
          },
          Object {
            "attrs": Object {},
            "children": Array [
              Object {
                "attrs": Object {
                  "fill": "#3b4044",
                  "r": 8,
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              Object {
                "attrs": Object {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "2",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence-number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "message",
        "itemId": "message-3-1",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "stroke": "#fdb05e",
            },
            "class": "loop__label-box",
            "type": "polygon",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "loop",
              "textBaseline": "top",
            },
            "class": "label-text",
            "type": "text",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "[Check input]",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "loop__title",
            "type": "text",
          },
        ],
        "class": "loop",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": Array [
                3,
                3,
              ],
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "class": "message__line",
            "itemId": "message-5-1",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "stroke": "#3b4044",
              "text": "your figure here",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "class": "message__text",
            "type": "text",
          },
          Object {
            "attrs": Object {},
            "children": Array [
              Object {
                "attrs": Object {
                  "fill": "#3b4044",
                  "r": 8,
                  "stroke": "#3b4044",
                  "symbol": "circle",
                },
                "type": "marker",
              },
              Object {
                "attrs": Object {
                  "fill": "#fdb05e",
                  "fontWeight": "bold",
                  "text": "3",
                  "textAlign": "center",
                  "textBaseline": "middle",
                },
                "class": "sequence-number",
                "type": "text",
              },
            ],
            "type": "group",
          },
        ],
        "class": "message",
        "itemId": "message-5-1",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "note over",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "note aside actor",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "anchor": "start",
              "fill": "#F8EA75",
              "stroke": "#3b4044",
            },
            "class": "note__bg",
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "multiline note
  is possible",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "note",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#f8f8f2",
              "lineWidth": 2,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 600,
              "text": "Divider",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "divider",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "User",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-User",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "Pintora",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-Pintora",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;

exports[`sequence-artist will render boxes 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#d6d3fa",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": "bold",
              "text": "group participants",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "type": "text",
          },
        ],
        "class": "sequence__participant-boxes",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "class": "actor__line",
            "type": "line",
          },
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [],
        "class": "activations",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "Alice",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-A",
        "type": "group",
      },
      Object {
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "#fdb05e",
              "radius": 4,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 16,
              "fontWeight": 400,
              "text": "B",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "class": "actor",
        "itemId": "actor-B",
        "type": "group",
      },
    ],
    "type": "group",
  },
}
`;
